# work_with_alembic

./: .dockerignore  .env  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  alembic.ini  database.py  docker-compose.yml  entrypoint.sh  main.py  orm.py  pyproject.toml  test.db
app/: database.py  redis_client.py
app/controllers/: address_controller.py  order_controller.py  product_controller.py  report_controller.py  user_controller.py
app/messaging/: rabbitmq_consumer.py  rabbitmq_producer.py
app/models/: __init__.py  address.py  order.py  order_report.py  product.py  user.py
app/repositories/: address_repository.py  order_repository.py  product_repository.py  user_repository.py
app/schemas/: address_schemas.py  enums.py  order_schemas.py  product_schemas.py  rabbitmq.py  report_schemas.py  user_schemas.py
app/services/: address_service.py  order_service.py  product_service.py  report_service.py  user_service.py
app/taskiq_background/: broker.py  scheduler.py  start_tskiq.py  tasks.py
controllers/: user_controller.py
migrations/: env.py
migrations/versions/: 12f5ea5b4b62_.py  1cbf5245cb47_.py  2d250e7ac29b_.py  3193fadbf861_change_smth.py  38076070a0c1_create_users_table.py  3bb9249a7e66_.py  56c01830e8cf_create_order_reports.py  5c2cd1506fe8_update_model_user.py  706fb6430b2a_create_tables.py  79c6a4171da4_initial_migration.py  8de39c2de269_.py  c8a629d40b66_.py  e53d8b884b84_.py
models/: __init__.py  product.py  user.py
repositories/: user_repository.py
schemas/: user_schemas.py
services/: user_service.py
tests/: conftest.py
tests/test_repositories/: order_repository_test.py  product_repository_test.py  user_repository_test.py
tests/test_services/: order_service_test.py
