[project]
name = "lr-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "email-validator>=2.3.0",
    "litestar>=2.18.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.38.0",
    "pytest",
    "pytest-asyncio",
    "polyfactory",
    "aiosqlite>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--verbose --color=yes"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pylint>=4.0.3",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "invalid-name",
    "raise-missing-from",
    "import-error",
    "no-member",
]
